--- a/examples.env
+++ b/examples.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_CANDY_MACHINE_ID=3zwFR3spiwbSSMtvVKG2bRT6ttqFoC3MHCafGP8ZrdLz
-NEXT_PUBLIC_RPC_HOST=https://metaplex.devnet.rpcpool.com/
-NEXT_PUBLIC_SOLANA_NETWORK=devent
+NEXT_PUBLIC_CANDY_MACHINE_ID=5PU3ppRcxWyco16y4DDBVK4JTessXSfVSD5paSMiEBXJ
+NEXT_PUBLIC_RPC_HOST=https://leisha-5i4rrc-fast-devnet.helius-rpc.com
+NEXT_PUBLIC_SOLANA_NETWORK=devnet
 # NEXT_PUBLIC_DEFAULT_GUARD_GROUP=
