--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_CANDY_MACHINE_ID=5PU3ppRcxWyco16y4DDBVK4JTessXSfVSD5paSMiEBXJ
 NEXT_PUBLIC_RPC_HOST=https://leisha-5i4rrc-fast-devnet.helius-rpc.com
 NEXT_PUBLIC_SOLANA_NETWORK=devnet
+NEXT_PUBLIC_DEFAULT_GUARD_GROUP=9pAcXEXUnNVT2vf8zLAgqS8fxRB8cNpJdwEwJ4guvTJe
